Fixed Subscribe and About pennants on small screens
Got stuck into it and finally kludged it into submission. This
(re)closes #52.

--- a/css/newsclip.css
+++ b/css/newsclip.css
@@ -112,7 +112,6 @@ label.toDate {
     height: 24;
     width: 148;
     margin-left: 10px;
-    /*    vertical-align: bottom;*/
 }
 
 
@@ -122,7 +121,6 @@ label.toDate {
 /* The Modal (background) */
 
 #modal {
-    /*    display: none;*/
     position: fixed;
     z-index: 1;
     left: 0;
@@ -142,26 +140,27 @@ label.toDate {
 }
 
 .pennant {
-    top: -2000;
-    clear: left;
     font: 14px "Pontano Sans", arial, sans-serif;
     color: #26315a;
-    width: 395px;
-    max-height: 550px;
+    max-width: 395px;
     min-width: 300px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     position: absolute;
+    top: -2000;
     box-shadow: 0 17px 50px 0 rgba(0, 0, 0, 0.50);
     transition: top 500ms ease-in-out;
     background-color: white;
     opacity: 1;
     z-index: 2;
-    overflow: auto;
+    overflow: hidden;
 }
 
-.pennant > div {
-    margin: 10px;
+.pennant > div,
+#mc_embed_signup_scroll {
+    margin-left: 10px;
+    overflow: auto;
+    height: 100%;
 }
 
 .pennant h2,
@@ -233,7 +232,7 @@ label.toDate {
 .close {
     color: #d0daec;
     position: absolute;
-    right: 8px;
+    right: 20px;
     top: 0px;
     font-size: 20px;
 }
